Hide index map when on mobile & fixed profile index page

--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -32,6 +32,8 @@
 		text-align:center;
 	}
 	h5 {
+		font-size: 1em;
+		word-wrap: break-word;
 		text-align:center;
 	}
 	p {
